@@ -38,6 +38,9 @@ IN DEVELOPMENT
    * 'bzr selftest' now shows a progress bar with the number of tests, and 
      progress made. 'make check' shows tests in -v mode, to be more useful
      for the PQM status window. (Robert Collins).
+     When using a progress bar, failed tests are printed out, rather than
+     being overwritten by the progress bar until the suite finishes.
+     (John Arbash Meinel)
 
    * 'bzr selftest --benchmark' will run a new benchmarking selftest.
      'bzr selftest --benchmark --lsprof-timed' will use lsprofile to generate
